<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:layout_margin="5dp"
    android:background="@drawable/custom_background">
    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:gravity="top">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:gravity="top">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/item"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textStyle="bold"
                android:layout_marginStart="50dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vat"
                android:textStyle="bold"
                android:layout_marginStart="50dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/actual_price"
                android:textStyle="bold"
                android:layout_marginStart="50dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            tools:ignore="TextSizeCheck">

            <Button
                android:id="@+id/milk_button"
                android:layout_width="wrap_content"
                android:background="@drawable/outlined_button"
                android:layout_height="40dp"
                android:text="@string/milk"
                />

            <TextView
                android:id="@+id/milk_price"
                android:layout_width="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_background"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/dummy_figure"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/milk_price_after_vat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_background"
                android:padding="5dp"
                android:text="@string/dummy_figure"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/milk_price_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_background"
                android:padding="5dp"
                android:text="@string/dummy_figure"
                android:textSize="20sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/sugar_button"
                android:layout_width="wrap_content"
                android:text="@string/sugar"
                android:background="@drawable/outlined_button"
                android:layout_height="40dp"
                />

            <TextView
                android:id="@+id/sugar_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_figure"
                android:textSize="20sp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:background="@drawable/custom_background"
                />
            <TextView
                android:id="@+id/sugar_price_after_vat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_figure"
                android:textSize="20sp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:background="@drawable/custom_background"
                />
            <TextView
                android:id="@+id/sugar_price_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_figure"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:background="@drawable/custom_background"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/flour_button"
                android:layout_width="wrap_content"
                android:background="@drawable/outlined_button"
                android:layout_height="40dp"
                android:text="@string/flour"
                />

            <TextView
                android:id="@+id/flour_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_figure"
                android:textSize="20sp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:background="@drawable/custom_background"
                />
            <TextView
                android:id="@+id/flour_price_after_vat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_figure"
                android:textSize="20sp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:background="@drawable/custom_background"
                />
            <TextView
                android:id="@+id/flour_price_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_figure"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:background="@drawable/custom_background"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/bread_button"
                android:layout_width="wrap_content"
                android:text="@string/bread"
                android:background="@drawable/outlined_button"
                android:layout_height="40dp"
                />

            <TextView
                android:id="@+id/bread_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_figure"
                android:textSize="20sp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:background="@drawable/custom_background"
                />
            <TextView
                android:id="@+id/bread_price_after_vat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_figure"
                android:textSize="20sp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:background="@drawable/custom_background"
                />
            <TextView
                android:id="@+id/bread_price_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_figure"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:background="@drawable/custom_background"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/top_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:layout_margin="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            tools:ignore="UselessParent">
            <Button
                android:id="@+id/grand_total_button"
                android:layout_width="170dp"
                android:layout_height="40dp"
                android:background="@drawable/outlined_button"
                android:text="@string/grand_total"
                />

            <TextView
                android:id="@+id/grand_total_amount"
                android:layout_width="139dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_background"
                android:padding="5dp"
                android:text="@string/dummy_figure"
                android:textSize="20sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            tools:ignore="UselessParent">
            <Button
                android:id="@+id/discount_button"
                android:layout_width="170dp"
                android:background="@drawable/outlined_button"
                android:layout_height="40dp"
                android:text="@string/discount"
                />

    <TextView
        android:id="@+id/discount_total_amount"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_background"
        android:padding="5dp"
        android:text="@string/dummy_figure"
        android:textSize="20sp" />

        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_marginBottom="30dp"
                tools:ignore="UselessParent">
                <Button
                    android:id="@+id/net_pay_button"
                    android:layout_width="170dp"
                    android:background="@drawable/outlined_button"
                    android:layout_height="40dp"
                    android:text="@string/net_pay"
                    />

            <TextView
                android:id="@+id/net_pay_amount"
                android:layout_width="143dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_background"
                android:padding="5dp"
                android:text="@string/dummy_figure"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>